examples/test/testpolicy1555.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1555
  namespace: namespace45
spec:
  podSelector:
    matchLabels:
      key44: value25
      key20: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value37
          key27: value37
          key17: value35
      podSelector:
        matchLabels:
          key20: value16
          key48: value40
          key39: value36
